examples/aws/cloudformation/ent.yaml
# Copyright 2021 Gravitational, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

AWSTemplateFormatVersion: '2010-09-09'
Description: Teleport Enterprise License
Parameters:
  KeyName:
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName

  InstanceType:
    Description: Teleport EC2 instance type
    ConstraintDescription: must be a valid EC2 instance type.
    Type: String
    Default: m4.large
    AllowedValues:
    - m5.large
    - m3.2xlarge
    - m3.large
    - m3.medium
    - m3.xlarge
    - m4.2xlarge
    - m4.4xlarge
    - m4.10xlarge
    - m4.16xlarge
    - m4.large
    - m4.xlarge
    - t2.large
    - t2.medium
    - t2.micro
    - t2.small
    - t2.xlarge

  DomainName:
    ConstraintDescription: Teleport Web UI Domain Name
    Description: Name of the domain name to use for Teleport
    Type: String

  DomainAdminEmail:
    ConstraintDescription: Teleport Domain Admin email
    Description: Name of Domain Name admin for Letsencrypt
    Type: String

  HostedZoneID:
    ConstraintDescription: ID of the hosted zone with Teleport domain
    Description: ID of the hosted zone of teleport domain
    Type: String

  # Any existing VPC used must have both DNS support and DNS hostnames enabled
  VPC:
    Description: Existing VPC ID to use (e.g. vpc-12312312)
    Type: AWS::EC2::VPC::Id

  # Public subnets to use for Teleport proxy
  ProxySubnetA:
    Description: ID of the first public proxy subnet (e.g. subnet-12312312)
    Type: AWS::EC2::Subnet::Id

  ProxySubnetB:
    Description: ID of the second public proxy subnet (e.g. subnet-12312312)
    Type: AWS::EC2::Subnet::Id

  # Private subnets to use for Teleport auth
  AuthSubnetA:
    Description: ID of the first private auth subnet (e.g. subnet-12312312)
    Type: AWS::EC2::Subnet::Id

  AuthSubnetB:
    Description: ID of the second private auth subnet (e.g. subnet-12312312)
    Type: AWS::EC2::Subnet::Id

  # Private subnets to use for Teleport nodes
  NodeSubnetA:
    Description: ID of the first private node subnet (e.g. subnet-12312312)
    Type: AWS::EC2::Subnet::Id

  NodeSubnetB:
    Description: ID of the second private node subnet (e.g. subnet-12312312)
    Type: AWS::EC2::Subnet::Id


Mappings:
  AWSInstanceType2Arch:
    m5.large: {Arch: HVM64}
    m3.2xlarge: {Arch: HVM64}
    m3.large: {Arch: HVM64}
    m3.medium: {Arch: HVM64}
    m3.xlarge: {Arch: HVM64}
    m4.2xlarge: {Arch: HVM64}
    m4.4xlarge: {Arch: HVM64}
    m4.10xlarge: {Arch: HVM64}
    m4.16xlarge: {Arch: HVM64}
    m4.large: {Arch: HVM64}
    m4.xlarge: {Arch: HVM64}
    t2.large: {Arch: HVM64}
    t2.medium: {Arch: HVM64}
    t2.micro: {Arch: HVM64}
    t2.small: {Arch: HVM64}
    t2.xlarge: {Arch: HVM64}

  AWSRegionArch2AMI:
    # All AMIs from AWS - gravitational-teleport-ami-ent-7.1.0
    eu-north-1: {HVM64: ami-05ff5c0be3d4b8da4}
    ap-south-1: {HVM64 : ami-0d340d3fc4b8051d1}
    eu-west-1: {HVM64 : ami-08ba6bc7ed8dade95}
    eu-west-2: {HVM64 : ami-0a893fb7245081288}
    eu-west-3: {HVM64: ami-087bdce4ab6a2964d}
    ap-northeast-1: {HVM64 : ami-02260dacf1fa1ce91}
    ap-northeast-2: {HVM64 : ami-074b35a25844d48b3}
    ap-northeast-3: {HVM64: ami-0a36f2dfdca83ea7d}
    sa-east-1: {HVM64 : ami-00e35c61bcd567f3b}
    ca-central-1: {HVM64 : ami-09004453d6e842b59}
    ap-southeast-1: {HVM64 : ami-04056f6ae528e55c3}
    ap-southeast-2: {HVM64 : ami-0960dcc60606de08a}
    eu-central-1: {HVM64 : ami-02782988ed890e6dd}
    us-east-1: {HVM64 : ami-0026dfecf9cc118a1}
    us-east-2: {HVM64 : ami-023a6950d3734b812}
    us-west-1: {HVM64 : ami-01bd4137ea8a7204b}
    us-west-2: {HVM64 : ami-0a2e4bd4a34f36e58}

Resources:
# Auth server setup
  AuthSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W40
            reason: "We want to allow all protocols on egress."
          - id: W5
            reason: "We want to allow egress traffic to anywhere."
          - id: W9
            reason: "Rules are deliberately relaxed here to allow VPC peered nodes to speak to auth services."
          - id: W2
            reason: "Rules are deliberately relaxed here to allow VPC peered nodes to speak to auth services."
    Properties:
      VpcId: {Ref: VPC}
      GroupDescription: Allow proxy and auth server access
      SecurityGroupIngress:

        - IpProtocol: tcp
          Description: SSH admin access is allowed from proxies
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: {Ref: ProxySecurityGroup}

          # This rule is relaxed to allow VPC peered nodes
          # to talk to auth services
        - IpProtocol: tcp
          Description: Everyone is welcome to use auth service API.
          FromPort: 3025
          ToPort: 3025
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:
        - IpProtocol: "-1"
          Description: Egress is allowed anywhere
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  # Nodes could be only accessed from proxies
  NodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W40
            reason: "We want to allow all protocols on egress."
          - id: W5
            reason: "We want to allow egress traffic to anywhere."
    Properties:
      VpcId: {Ref: VPC}
      GroupDescription: Allow proxy access
      SecurityGroupIngress:

        - IpProtocol: tcp
          Description: SSH keypair access is allowed from proxies
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: {Ref: ProxySecurityGroup}

        - IpProtocol: tcp
          Description: Teleport SSH access is allowed from proxies
          FromPort: 3022
          ToPort: 3022
          SourceSecurityGroupId: {Ref: ProxySecurityGroup}

      SecurityGroupEgress:
        - IpProtocol: "-1"
          Description: Egress is allowed anywhere
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  AuthLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internal
      Type: network
      LoadBalancerAttributes:
        - Key: load_balancing.cross_zone.enabled
          Value: 'true'
      Subnets:
        - Ref: AuthSubnetA
        - Ref: AuthSubnetB

  AuthLBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: AuthTargetGroup
      LoadBalancerArn:
        Ref: AuthLB
      Port: 3025
      Protocol: TCP

  AuthTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: TCP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 4
      UnhealthyThresholdCount: 4
      Port: 3025
      Protocol: TCP
      VpcId: {Ref: VPC}

  AuthLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName:
        Ref: KeyName
      # This line finds appropriate image ID based on the arch, region and instance type using FindInMap function
      ImageId: !FindInMap [AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [AWSInstanceType2Arch, !Ref InstanceType, Arch]]
      UserData:
        Fn::Base64:
          # Fn:Sub accepts two parameters as a list, the first one is the template
          # the second parameter is a dictionary with template-local variables
          Fn::Sub:
          - |
            #!/bin/bash -xe

            # Indicate that this ami is auth for all systemd units
            echo "auth" >> /etc/teleport.d/role.auth

            # Set some instance specific environment variables configurations for systemd configuration file
            cat >> /etc/teleport.d/conf <<EOF
            EC2_REGION=${AWS::Region}
            TELEPORT_AUTH_SERVER_LB=${LocalAuthServerLB}
            TELEPORT_CLUSTER_NAME=${DomainName}
            TELEPORT_DOMAIN_ADMIN_EMAIL=${DomainAdminEmail}
            TELEPORT_DOMAIN_NAME=${DomainName}
            TELEPORT_DYNAMO_TABLE_NAME=${LocalMainTableName}
            TELEPORT_DYNAMO_EVENTS_TABLE_NAME=${LocalEventsTableName}
            TELEPORT_LOCKS_TABLE_NAME=${LocalLocksTableName}
            TELEPORT_ROLE=auth
            TELEPORT_S3_BUCKET=${LocalBucketName}
            TELEPORT_SSM_KEY_ARN=${LocalKeyARN}
            EOF

            # Generate config and start proxy service
            /usr/local/bin/teleport-generate-config
            systemctl enable teleport-ssm-publish-tokens.service teleport-ssm-publish-tokens.timer teleport-get-cert.service teleport-get-cert.timer teleport-renew-cert.service teleport-renew-cert.timer
            systemctl start --no-block teleport-auth teleport-ssm-publish-tokens.timer teleport-get-cert.timer teleport-renew-cert.timer

            # Write out healthcheck script
            cat >> /usr/local/bin/teleport-cfn-signal-done <<EOF
            #!/bin/bash
            for i in {1..10}; do systemctl status teleport-auth && break || sleep 10; done
            systemctl status teleport-auth
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource AuthASG --region ${AWS::Region}
            EOF

            # Make healthcheck script executable
            chmod +x /usr/local/bin/teleport-cfn-signal-done

            # Write out healthcheck systemd unit file
            cat >> /etc/systemd/system/cfn-signal-done.service <<EOF
            [Unit]
            Description=CloudFormation status signaller
            After=network.target

            [Service]
            User=root
            Group=adm
            Type=oneshot
            ExecStart=/usr/local/bin/teleport-cfn-signal-done
            EOF

            # Make systemd healthcheck unit run
            systemctl daemon-reload
            systemctl start --no-block cfn-signal-done.service
          - {
            LocalAuthServerLB: !GetAtt AuthLB.DNSName,
            LocalMainTableName: !Select [1, !Split ["/", !GetAtt MainTable.Arn]],
            LocalLocksTableName: !Select [1, !Split ["/", !GetAtt LocksTable.Arn]],
            LocalEventsTableName: !Select [1, !Split ["/", !GetAtt EventsTable.Arn]],
            LocalBucketName: !Select [1, !Split [":::", !GetAtt Bucket.Arn]],
            LocalKeyARN: !GetAtt Key.Arn
            }
      SecurityGroups:
        - Ref: AuthSecurityGroup
      InstanceType: {Ref: InstanceType}
      IamInstanceProfile: {Ref: AuthInstanceProfile}
      # Proxies have to have public IP address in order
      # to be reachable from the internet according to this
      # article: https://aws.amazon.com/premiumsupport/knowledge-center/public-load-balancer-private-ec2/
      AssociatePublicIpAddress: false

  AuthASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    CreationPolicy:
      ResourceSignal:
        Count: 2
        Timeout: PT10M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: 2
        MinInstancesInService: 0
        MinSuccessfulInstancesPercent: 100
        PauseTime: PT5M
        WaitOnResourceSignals: true
    Properties:
      # Use IDs of the subnets created in two AZs
      # to let AWS know we want instances to be placed
      # in those subnets.
      VPCZoneIdentifier:
        - {Ref: AuthSubnetA}
        - {Ref: AuthSubnetB}
      LaunchConfigurationName: {Ref: AuthLaunchConfig}
      MinSize: "2"
      MaxSize: "2"
      TargetGroupARNs:
        - {Ref: AuthTargetGroup}

  #
  # Proxy Setup
  #
  ProxySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W40
            reason: "We want to allow all protocols on egress."
          - id: W5
            reason: "We want to allow egress traffic to anywhere."
          - id: W9
            reason: "We want to permit incoming traffic from anywhere."
          - id: W2
            reason: "We want to permit incoming traffic from anywhere."
    Properties:
      VpcId: {Ref: VPC}
      GroupDescription: Allow proxy and auth server access
      SecurityGroupIngress:
        - IpProtocol: tcp
          Description: SSH emergency access
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          Description: Port for SSH clients
          FromPort: 3023
          ToPort: 3023
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          Description: Port for remote trusted clusters
          FromPort: 3024
          ToPort: 3024
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          Description: Port for HTTPS connections
          FromPort: 3080
          ToPort: 3080
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:
        - IpProtocol: "-1"
          Description: Egress is allowed anywhere
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  ProxyLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: network
      LoadBalancerAttributes:
        - Key: load_balancing.cross_zone.enabled
          Value: 'true'
      Subnets:
        - Ref: ProxySubnetA
        - Ref: ProxySubnetB

  # Create A DNS entry pointing to load balancer
  ProxyDNS:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      HostedZoneId: !Ref HostedZoneID
      Comment: Zone Alias for DNS
      RecordSets:
      - Name: !Ref DomainName
        Type: A
        AliasTarget:
          HostedZoneId: !GetAtt ProxyLB.CanonicalHostedZoneID
          DNSName: !GetAtt ProxyLB.DNSName

  ProxyLBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: ProxyWebTargetGroup
      LoadBalancerArn:
        Ref: ProxyLB
      Port: 443
      Protocol: TCP

  ProxyWebTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: TCP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 4
      UnhealthyThresholdCount: 4
      Port: 3080
      Protocol: TCP
      VpcId: {Ref: VPC}

  ProxyLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName:
        Ref: KeyName
      # This line finds appropriate image ID based on the arch, region and instance type using FindInMap function
      ImageId: !FindInMap [AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [AWSInstanceType2Arch, !Ref InstanceType, Arch]]
      UserData:
        Fn::Base64:
          # Fn:Sub accepts two parameters as a list, the first one is the template
          # the second parameter is a dictionary with template-local variables
          Fn::Sub:
          - |
            #!/bin/bash -xe

            # Indicate that this ami is proxy for all systemd units
            echo "proxy" >> /etc/teleport.d/role.proxy

            # Set some instance specific environment variables configurations for systemd configuration file
            cat >> /etc/teleport.d/conf <<EOF
            EC2_REGION=${AWS::Region}
            TELEPORT_AUTH_SERVER_LB=${LocalAuthServerLB}
            TELEPORT_CLUSTER_NAME=${DomainName}
            TELEPORT_DOMAIN_NAME=${DomainName}
            TELEPORT_PROXY_SERVER_LB=${LocalProxyServerLB}
            TELEPORT_S3_BUCKET=${LocalBucketName}
            TELEPORT_ROLE=proxy
            TELEPORT_SSM_KEY_ARN=${LocalKeyARN}
            EOF

            # Generate config and start proxy service
            /usr/local/bin/teleport-generate-config
            systemctl enable teleport-proxy.service teleport-check-cert.service teleport-check-cert.timer
            systemctl start --no-block teleport-proxy.service teleport-check-cert.timer

            # Write out healthcheck script
            cat >> /usr/local/bin/teleport-cfn-signal-done <<EOF
            #!/bin/bash
            for i in {1..40}; do systemctl status teleport-proxy && break || sleep 30; done
            systemctl status teleport-proxy
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ProxyASG --region ${AWS::Region}
            EOF

            # Make healthcheck script executable
            chmod +x /usr/local/bin/teleport-cfn-signal-done

            # Write out healthcheck systemd unit file
            cat >> /etc/systemd/system/cfn-signal-done.service <<EOF
            [Unit]
            Description=CloudFormation status signaller
            After=network.target

            [Service]
            User=root
            Group=adm
            Type=oneshot
            ExecStart=/usr/local/bin/teleport-cfn-signal-done
            EOF

            # Make systemd healthcheck unit run
            systemctl daemon-reload
            systemctl start --no-block cfn-signal-done.service
          - {
            LocalAuthServerLB: !GetAtt AuthLB.DNSName,
            LocalProxyServerLB: !GetAtt ProxyLB.DNSName,
            LocalKeyARN: !GetAtt Key.Arn,
            LocalBucketName: !Select [1, !Split [":::", !GetAtt Bucket.Arn]]
            }
      SecurityGroups:
        - Ref: ProxySecurityGroup
      InstanceType: {Ref: InstanceType}
      # Proxies have to have public IP address in order
      # to be reachable from the internet according to this
      # article: https://aws.amazon.com/premiumsupport/knowledge-center/public-load-balancer-private-ec2/
      AssociatePublicIpAddress: true
      # IamInstance profile is an instance profile of the proxy
      IamInstanceProfile: {Ref: ProxyInstanceProfile}

  ProxyASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    CreationPolicy:
      ResourceSignal:
        Count: 2
        Timeout: PT30M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: 1
        MinInstancesInService: 1
        MinSuccessfulInstancesPercent: 100
        PauseTime: PT10M
        WaitOnResourceSignals: true
    Properties:
      # Use IDs of the subnets created in two AZs
      # to let AWS know we want instances to be placed
      # in those subnets.
      VPCZoneIdentifier:
        - {Ref: ProxySubnetA}
        - {Ref: ProxySubnetB}
      LaunchConfigurationName: {Ref: ProxyLaunchConfig}
      MinSize: "2"
      MaxSize: "2"
      TargetGroupARNs:
        - {Ref: ProxyWebTargetGroup}


  NodeLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName:
        Ref: KeyName
      # This line finds appropriate image ID based on the arch, region and instance type using FindInMap function
      ImageId: !FindInMap [AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [AWSInstanceType2Arch, !Ref InstanceType, Arch]]
      UserData:
        Fn::Base64:
          # Fn:Sub accepts two parameters as a list, the first one is the template
          # the second parameter is a dictionary with template-local variables
          Fn::Sub:
          - |
            #!/bin/bash -xe

            # Indicate that this ami is node for all systemd units
            echo "node" >> /etc/teleport.d/role.node

            # Set some instance specific environment variables configurations for systemd configuration file
            cat >> /etc/teleport.d/conf <<EOF
            EC2_REGION=${AWS::Region}
            TELEPORT_AUTH_SERVER_LB=${LocalAuthServerLB}
            TELEPORT_CLUSTER_NAME=${DomainName}
            TELEPORT_DOMAIN_NAME=${DomainName}
            TELEPORT_ROLE=node
            TELEPORT_S3_BUCKET=${LocalBucketName}
            TELEPORT_SSM_KEY_ARN=${LocalKeyARN}
            EOF

            # Generate config and start proxy service
            /usr/local/bin/teleport-generate-config
            systemctl enable teleport-node.service
            systemctl start --no-block teleport-node.service
          - {
            LocalAuthServerLB: !GetAtt AuthLB.DNSName,
            LocalKeyARN: !GetAtt Key.Arn,
            LocalBucketName: !Select [1, !Split [":::", !GetAtt Bucket.Arn]]
            }
      SecurityGroups:
        - Ref: NodeSecurityGroup
      InstanceType: {Ref: InstanceType}
      AssociatePublicIpAddress: false
      # IamInstance profile is an instance profile of the proxy
      IamInstanceProfile: {Ref: NodeInstanceProfile}

  NodeASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      # Use IDs of the subnets created in two AZs
      # to let AWS know we want instances to be placed
      # in those subnets.
      VPCZoneIdentifier:
        - {Ref: NodeSubnetA}
        - {Ref: NodeSubnetB}
      LaunchConfigurationName: {Ref: NodeLaunchConfig}
      MinSize: "2"
      MaxSize: "2"

  AuthRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"

  # Allows auth server to publish join tokens
  # to SSM parameter store
  AuthPolicies:
    Type: AWS::IAM::Policy
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W12
            reason: "The use of the * resource here is fine."
    Properties:
      PolicyName: !Join ["-", [!Ref AuthRole, "ssm"]]
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          # Allow auth server to update SSM instance status
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":instance/*" ]]
            Action:
            - "ssm:UpdateInstanceInformation"
          # Allow auth server to publish join tokens to SSM parameter store
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":parameter/teleport/", !Ref DomainName, "/*"]]
            Action:
            - "ssm:DescribeParameters"
            - "ssm:GetParameters"
            - "ssm:GetParametersByPath"
            - "ssm:GetParameter"
            - "ssm:PutParameter"
            - "ssm:DeleteParameter"
          # Allow auth server to control main dynamo db table
          -
            Effect: "Allow"
            Resource: !GetAtt MainTable.Arn
            Action:
            - "dynamodb:BatchGet*"
            - "dynamodb:DescribeStream"
            - "dynamodb:DescribeTable"
            - "dynamodb:Get*"
            - "dynamodb:Query"
            - "dynamodb:Scan"
            - "dynamodb:BatchWrite*"
            - "dynamodb:CreateTable"
            - "dynamodb:Delete*"
            - "dynamodb:Update*"
            - "dynamodb:PutItem"
            - "dynamodb:List*"
            - "dynamodb:DescribeReservedCapacity*"
            - "dynamodb:DescribeLimits"
            - "dynamodb:DescribeTimeToLive"

          # Allow auth server to use streams on main DynamoDB table
          -
            Effect: "Allow"
            Resource: !Join ["", [!GetAtt MainTable.Arn, "/stream/*"]]
            Action:
            - "dynamodb:DescribeStream"
            - "dynamodb:ListStream"
            - "dynamodb:GetRecords"
            - "dynamodb:GetShardIterator"

          # Allow auth server to control audit dynamo db table
          # and it's secondary indexes
          -
            Effect: "Allow"
            Resource: !GetAtt EventsTable.Arn
            Action:
            - "dynamodb:BatchGet*"
            - "dynamodb:DescribeStream"
            - "dynamodb:DescribeTable"
            - "dynamodb:Get*"
            - "dynamodb:Query"
            - "dynamodb:Scan"
            - "dynamodb:BatchWrite*"
            - "dynamodb:CreateTable"
            - "dynamodb:Delete*"
            - "dynamodb:Update*"
            - "dynamodb:PutItem"
            - "dynamodb:List*"
            - "dynamodb:DescribeReservedCapacity*"
            - "dynamodb:DescribeLimits"
            - "dynamodb:DescribeTimeToLive"

          -
            Effect: "Allow"
            Resource: !Join ["", [!GetAtt EventsTable.Arn, "/index/*"]]
            Action:
            - "dynamodb:Query"
            - "dynamodb:Scan"

          # Allow auth server to control locks dynamo db table
          -
            Effect: "Allow"
            Resource: !GetAtt LocksTable.Arn
            Action:
            - "dynamodb:BatchGet*"
            - "dynamodb:DescribeStream"
            - "dynamodb:DescribeTable"
            - "dynamodb:Get*"
            - "dynamodb:Query"
            - "dynamodb:Scan"
            - "dynamodb:BatchWrite*"
            - "dynamodb:CreateTable"
            - "dynamodb:Delete*"
            - "dynamodb:Update*"
            - "dynamodb:PutItem"
            - "dynamodb:List*"
            - "dynamodb:DescribeReservedCapacity*"
            - "dynamodb:DescribeLimits"
            - "dynamodb:DescribeTimeToLive"

          # Auth server is allowed to read and write from the bucket
          -
            Effect: "Allow"
            Resource: !GetAtt Bucket.Arn
            Action:
            - "s3:ListBucket"
            - "s3:ListBucketVersions"
            - "s3:ListBucketMultipartUploads"

          -
            Effect: "Allow"
            Resource: !Join ["/", [!GetAtt Bucket.Arn, "*"]]
            Action:
            - "s3:GetObject"
            - "s3:PutObject"
            - "s3:GetObjectVersion"

          # Allow to list hosted zone changes
          -
            Effect: "Allow"
            Resource: "*"
            Action:
            - "route53:ListHostedZones"
            - "route53:GetChange"

          # Allow auth server to modify record sets (for DNS-01 letsencrypt challenge)
          # DNS-01 is the most reliable challenge up to date, that's why we are using it
          -
            Effect: "Allow"
            Resource: !Join ["/", ["arn:aws:route53:::hostedzone", !Ref HostedZoneID]]
            Action:
            - "route53:ChangeResourceRecordSets"
      Roles:
      - {Ref: AuthRole}
  AuthInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
      - {Ref: AuthRole}

  ProxyRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"

  # Allows proxies to read tokens from SSM parameter store
  # And read certs from encrypted S3 bucket
  ProxyPolicies:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: !Join ["-", [!Ref ProxyRole, "ssm"]]
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          # Allow proxy to update SSM instance status
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":instance/*" ]]
            Action:
            - "ssm:UpdateInstanceInformation"
          # Allow proxy to read tokens and CA from SSM parameter store
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":parameter/teleport/", !Ref DomainName, "/tokens/proxy"]]
            Action:
            - "ssm:GetParameters"
            - "ssm:GetParametersByPath"
            - "ssm:GetParameter"

          # Allow proxy to read tokens and CA from SSM parameter store
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":parameter/teleport/", !Ref DomainName, "/ca-pin-hash"]]
            Action:
            - "ssm:GetParameters"
            - "ssm:GetParametersByPath"
            - "ssm:GetParameter"

          # Allow auth server to read from S3 bucket
          -
            Effect: "Allow"
            Resource: !GetAtt Bucket.Arn
            Action:
            - "s3:ListBucket"
            - "s3:ListBucketVersions"
            - "s3:ListBucketMultipartUploads"

          -
            Effect: "Allow"
            Resource: !Join ["/", [!GetAtt Bucket.Arn, "*"]]
            Action:
            - "s3:GetObject"
            - "s3:GetObjectVersion"

      Roles:
      - {Ref: ProxyRole}
  ProxyInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
      - {Ref: ProxyRole}

  NodeRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"

  # Allows nodes to read SSM parameter store
  # join tokens
  NodePolicies:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: !Join ["-", [!Ref NodeRole, "ssm"]]
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          # Allow node to update SSM instance status
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":instance/*" ]]
            Action:
            - "ssm:UpdateInstanceInformation"
          # Allow node to read tokens and CA from SSM parameter store
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":parameter/teleport/", !Ref DomainName, "/tokens/node"]]
            Action:
            - "ssm:GetParameters"
            - "ssm:GetParametersByPath"
            - "ssm:GetParameter"

          # Allow node to read tokens and CA from SSM parameter store
          -
            Effect: "Allow"
            Resource: !Join ["", ["arn:aws:ssm:", !Ref "AWS::Region", ":", !Ref "AWS::AccountId", ":parameter/teleport/", !Ref DomainName, "/ca-pin-hash"]]
            Action:
            - "ssm:GetParameters"
            - "ssm:GetParametersByPath"
            - "ssm:GetParameter"

      Roles:
      - {Ref: NodeRole}
  NodeInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
      - {Ref: NodeRole}

  Key:
    Type: "AWS::KMS::Key"
    Properties:
      Description: "SSM Key used by Teleport"
      EnableKeyRotation: True
      KeyPolicy:
        Version: "2012-10-17"
        Id: "key-default-1"
        Statement:
          -
            Sid: "Allow administration of the key"
            Effect: "Allow"
            Principal:
              AWS: !Join ["", ["arn:aws:sts::", !Ref "AWS::AccountId", ":root"]]
            Action:
            - "kms:Create*"
            - "kms:Describe*"
            - "kms:Enable*"
            - "kms:List*"
            - "kms:Put*"
            - "kms:Update*"
            - "kms:Revoke*"
            - "kms:Disable*"
            - "kms:Get*"
            - "kms:Delete*"
            - "kms:ScheduleKeyDeletion"
            - "kms:CancelKeyDeletion"
            Resource: "*"

          -
            Sid: "Allow auth use of the key"
            Effect: "Allow"
            Principal:
              AWS: !GetAtt AuthRole.Arn
            Action:
              - "kms:Encrypt"
              - "kms:Decrypt"
              - "kms:ReEncrypt*"
              - "kms:GenerateDataKey*"
              - "kms:DescribeKey"
            Resource: "*"

          -
            Sid: "Allow proxy use of the key"
            Effect: "Allow"
            Principal:
              AWS: !GetAtt ProxyRole.Arn
            Action:
              - "kms:Decrypt"
              - "kms:DescribeKey"
            Resource: "*"

          -
            Sid: "Allow node use of the key"
            Effect: "Allow"
            Principal:
              AWS: !GetAtt NodeRole.Arn
            Action:
              - "kms:Decrypt"
              - "kms:DescribeKey"
            Resource: "*"


  # MainTable is a main dynamodb table
  # where teleport stores all relevant state
  MainTable:
    Type: AWS::DynamoDB::Table
    Properties:
      KeySchema:
      - {AttributeName: "HashKey", KeyType: "HASH"}
      - {AttributeName: "FullPath", KeyType: "RANGE"}

      ProvisionedThroughput: {ReadCapacityUnits: 20, WriteCapacityUnits: 20}
      AttributeDefinitions:
      - {AttributeName: "HashKey", AttributeType: "S"}
      - {AttributeName: "FullPath", AttributeType: "S"}

      TimeToLiveSpecification: {AttributeName: "Expires", Enabled: true}
      # Server side encrypt all the data for this table
      SSESpecification: {SSEEnabled: true}
      StreamSpecification:
        StreamViewType: NEW_IMAGE

  # LocksTable is a dynamodb table that is
  # used as a distributed lock between auth servers
  # trying to renew and manage letsencrypt certificate
  LocksTable:
    Type: AWS::DynamoDB::Table
    Properties:
      KeySchema:
      - {AttributeName: "Lock", KeyType: "HASH"}

      ProvisionedThroughput: {ReadCapacityUnits: 5, WriteCapacityUnits: 5}
      AttributeDefinitions:
      - {AttributeName: "Lock", AttributeType: "S"}

      TimeToLiveSpecification: {AttributeName: "Expires", Enabled: true}

  # EventsTable is a dynamodb table that is
  # used to store teleport audit log events
  EventsTable:
    Type: AWS::DynamoDB::Table
    Properties:
      KeySchema:
      - {AttributeName: "SessionID", KeyType: "HASH"}
      - {AttributeName: "EventIndex", KeyType: "RANGE"}

      ProvisionedThroughput: {ReadCapacityUnits: 20, WriteCapacityUnits: 20}
      AttributeDefinitions:
      - {AttributeName: "SessionID", AttributeType: "S"}
      - {AttributeName: "EventIndex", AttributeType: "N"}
      - {AttributeName: "CreatedAtDate", AttributeType: "S"}
      - {AttributeName: "CreatedAt", AttributeType: "N"}

      TimeToLiveSpecification: {AttributeName: "Expires", Enabled: true}

      GlobalSecondaryIndexes:
      - IndexName: "timesearchV2"
        KeySchema:
        - AttributeName: "CreatedAtDate"
          KeyType: "HASH"
        - AttributeName: "CreatedAt"
          KeyType: "RANGE"
        Projection:
          ProjectionType: "ALL"
        ProvisionedThroughput:
          ReadCapacityUnits: 20
          WriteCapacityUnits: 20

  # Bucket is used to publish letsencrypt certs
  # and store recorded SSH sessions
  Bucket:
    Type: AWS::S3::Bucket
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W35
            reason: "We don't need access logging configured here."
    # Cloudformation can't delete non-empty bucket
    DeletionPolicy: Retain
    Properties:
      VersioningConfiguration: {Status: Enabled}
      BucketEncryption:
        ServerSideEncryptionConfiguration:
        - ServerSideEncryptionByDefault: {SSEAlgorithm: AES256}

Outputs:
  S3BucketID:
    Description: The ID of the created S3 bucket
    Value:
      Ref: Bucket
    Export:
      Name: S3BucketID
